charts/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostNetwork: true                    # adiciona
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        supplementalGroups:
          - 992
          - 44
      runtimeClassName: nvidia
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:10.11.11
          ports:
            - containerPort: 8096
          resources:
            requests:
              memory: 356Mi
              cpu: 100m
            limits:
              memory: 4Gi
              cpu: 2000m
              nvidia.com/gpu: 1
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: transcode
              mountPath: /transcode
          startupProbe:              # ← aqui
            httpGet:
              path: /health
              port: 8096
            failureThreshold: 60
            periodSeconds: 10
          livenessProbe:             # ← e aqui
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 5
      volumes:
        - name: config
          hostPath:
            path: /mnt/ext_ssh_bk/configs/jellyfin
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /mnt/big_storage/Torrent
            type: DirectoryOrCreate
        - name: transcode
          hostPath:
            path: /mnt/big_storage/transcode  # ← era Memory, agora disco
            type: DirectoryOrCreate
