charts/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
    - port: 8096       # Porta interna do Cluster
      targetPort: 8096 # Porta no Container
      nodePort: 30096  # Porta externa (Acesso via IP)
